--- a/sources/sections/01-scope.adoc
+++ b/sources/sections/01-scope.adoc
@@ -10,7 +10,7 @@ This OGC Standard for Designing and Writing Modular Standards, also known as the
 The standardization goal of the ModSpec is to define characteristics and a structure for the specification of modular and testable Standards 
 that will encourage implementation by minimizing difficulty determining
 requirements, mimicking implementation structure, and maximizing usability and
-interoperability. The ultimate goal of this approach is to enable interoperable implementations of a standard to be tested and deemed _conformant_ or not.
+interoperability. The ultimate goal of this approach is to enable interoperable implementations of a standard as a collection of modules that can be tested and deemed _conformant_ or not.
 
 The one standardization target type for the ModSpec is modular standards. While the primary focus is on modular OGC standards, this approach should prove applicable to standards for any domain.
 
@@ -23,7 +23,7 @@ The <<fundamentals,Standards Fundamentals>> clause provides a more detailed intr
 
 Also read Annex C. <<annex-C,Annex C>> defines the UML model upon which the ModSpec is
 based. Annex C also contains informal and non-normative definitions ordered for ease
-of understanding. These two sections can be read first to aid in the understanding of
+of understanding. These two sections of Annex C can be read first to aid in the understanding of
 the rest of the document.
 
 NOTE: Please note that the ModSpec has been approved by the OGC Membership as a policy directive for the development and revision of any OGC Standard or Abstract Specification that has requirements. However, the ModSpec is written to be non-OGC specific and can be used by any Standards Development Organization (SDO) as a formal guide for structuring a standards document.
