--- a/sources/sections/00-preface.adoc
+++ b/sources/sections/00-preface.adoc
@@ -4,9 +4,11 @@
 This OGC member developed and approved document, referred to as the `ModSpec`, defines a model and related requirements 
 and recommendations for writing and structuring modular standards documents. Further, this model is designed to enable 
 the consistent and verifiable testing of implementations of a standard that claim conformance. The ModSpec is a meta-standard: 
-A standard specifying requirements for crafting and documenting testable standards. 
+A standard specifying requirements for crafting and documenting modular standards. 
 
-The goal is to ensure that a standard specifies requirements in a common and consistent manner and that these requirements are testable.
+The goal is to define characteristics and a structure for the development of modular standards which will minimize the difficulty in writing testable standards while maximizing usability and interoperability.
+
+ensure that a standard specifies requirements in a common and consistent manner and that these requirements are testable.
 
 NOTE: Historically, this document has been known and abbreviated as the "ModSpec". For continuity and ease of understanding this document may also be refered to as the "OGC ModSpec".
 
