--- a/sources/sections/04-terms-and-defs.adoc
+++ b/sources/sections/04-terms-and-defs.adoc
@@ -18,91 +18,6 @@ Many of these definitions depend upon the model given in <<annex-C,Annex C: ModS
 
 a <<RequirementsClass-definition,requirements class>> or a <<RequirementsModule-definition,requirements module>> with no direct dependencies on other requirements classes or modules and their associated <<ComplianceClass-definition,compliance test class>> or <<ComplianceModule-definition,compliance test module>>. 
 
-=== General Terms and Definitions
-
-[[BestPractice-definition]]
-
-==== Best Practice
-
-a <<Specification-definition,specification>> that has been approved by a legitimate Standards Body as a recommendation for implementation.  
-
-[[InformativeStatement-definition]]
-
-==== Informative Statement
-
-expression in a document conveying non-normative information
-
-NOTE: Includes all statements in a document not part of the normative requirements, recommendations, permissions, or conformance tests. Included for completeness. 
-
-[[Module-definition]]
-
-==== Module
-
-each of a set of standardized parts or independent units that can be used to construct a more complex structure
-
-Note: The concept ‘module’ is key to the ModSpec structure and model. Modules have a direct relationship to the concept of building blocks. The power of the concept is that modules can be reused in different systems (specify once, use many). Modules can be imported from other programs. Modules can be replaced without affecting the rest of the system. 
-
-[[NormativeStatement-definition]]
-
-==== Normative Statement
-
-expression in a document conveying information required to define conformance
-
-NOTE:  Includes all normative statements in a document including requirements, recommendations, permissions, and conformance tests. Included for completeness. 
-
-[[Specification-definition]]
-
-==== Specification
-
-document containing recommendations, requirements, permissions, and conformance tests
-
-NOTE:  This definition is included for completeness. 
-
-NOTE:  In the OGC, there are Abstract Specifications and Implementation Standards. Abstract Specifications may of may not be testable. Further, Abstract Specifications may not be directly implementable. Implementation Standards are always testable and contain a conformance test suite. 
-
-[[Standard-definition]]
-
-==== Standard
-
-a <<Specification-definition,specification>> that has been approved by a legitimate Standards Body 
-
-NOTE:  This definition is included for completeness. Standard and specification can apply to the same document. While specification is always valid, standard only applies after the adoption of the document by a legitimate standards organization.  
-
-NOTE:  A standard should consist primarily of Normative Statements. The goal should be for the standard to be concise. Supporting information can be provided through a users guide. 
-
-[[Statement-definition]]
-
-==== Statement
-
-expression in a document conveying information 
-
-[[UsersGuide-definition]]
-
-==== Users Guide
-
-Non-normative information that assists in understanding a standard but is not required to implement the standard.   
-
-=== Concepts Terms and Definitions
-
-[[CertificateOfConformance-definition]]
-
-==== Certificate Of Conformance
-
-evidence of conformance to all or part of a standard, awarded for passing one or more of the conformance test classes specified in that standard 
-
-NOTE:  Certificates‖ do not have to be instantiated documents; having proof of passing the conformance test class is sufficient. For example, the OGC currently keeps an online list of conformant applications at http://www.opengeospatial.org/resource/products. 
-Each certificate of conformance is awarded to a standardization target.  
-
-[[CoreRequirementsClass-definition]]
-
-==== Core Requirements Class
-
-unique requirements class that must be satisfied by any conformant standardization targets associated to the standard
-
-NOTE:  The core requirements class is unique because if it was possible to have more than one, then each core would have to be implemented to pass any conformance test class, and thus would have to be contained in any other core. The core may be empty, or all or part of another standard or related set of standards. 
-
-The core can refer to this requirements class, its associated conformance test class or the software module that implements that requirements class.  
-
 [[Dependency-definition]]
 
 ==== Dependency
@@ -143,6 +58,14 @@ For example, if a DRM-enabled service is required to have an association to a li
 UML model package that does not contain any subpackages, but contains classifiers 
 [UML]  
 
+[[Module-definition]]
+
+==== Module
+
+each of a set of standardized parts or independent units that can be used to construct a more complex structure
+
+Note: The concept ‘module’ is key to the ModSpec structure and model. Modules have a direct relationship to the concept of building blocks. The power of the concept is that modules can be reused in different systems (specify once, use many). Modules can be imported from other programs. Modules can be replaced without affecting the rest of the system. 
+
 [[Profile-definition]]
 
 ==== Profile
@@ -154,6 +77,71 @@ NOTE:  In the usage of the ModSpec, a profile will be a set of requirements clas
 This means that a standardization target being conformant to a profile implies that the same target is conformant to the standards referenced in the profile.
 
 [ISO/IEC TR 10000-1]    
+
+=== Documentation Terms and Definitions
+
+[[BestPractice-definition]]
+
+==== Best Practice
+
+a <<Specification-definition,specification>> that has been approved by a legitimate Standards Body as a recommendation for implementation.  
+
+[[CertificateOfConformance-definition]]
+
+==== Certificate Of Conformance
+
+evidence of conformance to all or part of a standard, awarded for passing one or more of the conformance test classes specified in that standard 
+
+NOTE:  Certificates‖ do not have to be instantiated documents; having proof of passing the conformance test class is sufficient. For example, the OGC currently keeps an online list of conformant applications at http://www.opengeospatial.org/resource/products. 
+Each certificate of conformance is awarded to a standardization target.  
+
+[[InformativeStatement-definition]]
+
+==== Informative Statement
+
+expression in a document conveying non-normative information
+
+NOTE: Includes all statements in a document not part of the normative requirements, recommendations, permissions, or conformance tests. Included for completeness. 
+
+[[NormativeStatement-definition]]
+
+==== Normative Statement
+
+expression in a document conveying information required to define conformance
+
+NOTE:  Includes all normative statements in a document including requirements, recommendations, permissions, and conformance tests. Included for completeness. 
+
+[[Specification-definition]]
+
+==== Specification
+
+document containing recommendations, requirements, permissions, and conformance tests
+
+NOTE:  This definition is included for completeness. 
+
+NOTE:  In the OGC, there are Abstract Specifications and Implementation Standards. Abstract Specifications may of may not be testable. Further, Abstract Specifications may not be directly implementable. Implementation Standards are always testable and contain a conformance test suite. 
+
+[[Standard-definition]]
+
+==== Standard
+
+a <<Specification-definition,specification>> that has been approved by a legitimate Standards Body 
+
+NOTE:  This definition is included for completeness. Standard and specification can apply to the same document. While specification is always valid, standard only applies after the adoption of the document by a legitimate standards organization.  
+
+NOTE:  A standard should consist primarily of Normative Statements. The goal should be for the standard to be concise. Supporting information can be provided through a users guide. 
+
+[[Statement-definition]]
+
+==== Statement
+
+expression in a document conveying information 
+
+[[UsersGuide-definition]]
+
+==== Users Guide
+
+Non-normative information that assists in understanding a standard but is not required to implement the standard.   
 
 === Core Terms and Definitions
 
@@ -196,6 +184,16 @@ How an implementation of the standard is tested for conformance. Testing may be 
 
 NOTE: Testing by an independent second party is recommended.
 
+[[CoreRequirementsClass-definition]]
+
+==== Core Requirements Class
+
+unique requirements class that must be satisfied by any conformant standardization targets associated to the standard
+
+NOTE:  The core requirements class is unique because if it was possible to have more than one, then each core would have to be implemented to pass any conformance test class, and thus would have to be contained in any other core. The core may be empty, or all or part of another standard or related set of standards. 
+
+The core can refer to this requirements class, its associated conformance test class or the software module that implements that requirements class.  
+
 [[Model-definition]]
 
 ==== Model
@@ -209,12 +207,6 @@ In short, the model provides the vocabulary for expressing requirements.
 ==== Permission
 
 uses “may” and is used to prevent a requirement from being “over interpreted” and as such is considered to be more of a “statement of fact” than a “normative” condition. 
-
-[[Principal-definition]]
-
-==== Principal
-
-TBD - Undefined in 08-131r3. 
 
 [[Recommendation-definition]]
 
@@ -286,19 +278,3 @@ TBD - undefined in 08-131r3
 
 In informative sections, the word "will" implies that something is an implication of a requirement. The "will" statements are
 not requirements, but explain the consequence of requirements.
-
-=== Types Terms and Definitions
-
-[[DateTime-definition]]
-
-==== DateTime
-
-[[RichText-definition]]
-
-==== RichText
-
-
-[[String-definition]]
-
-==== String
-
