--- a/sources/sections/06-fundamentals.adoc
+++ b/sources/sections/06-fundamentals.adoc
@@ -30,7 +30,7 @@ Instances of a Standardization Target Type are the Standardization Targets.  The
 
 Standardization Target Types can be hierarchical. The Conceptual, Logical, Physical hierarchy is one example where the Standardization Target Types are information models. Another example would be implementations of OGC API - Features Part 2 that support XML data exchange.
 
-Notice that the Standardization Targets and Standardization Target Types no longer form a simple taxonomy. The Standardization Target Types, Standardization Targets, and Standardization Goal provide a well-defined context for the standard.  This will help users of standards to quickly understand the scope of a standard and to select those standards appropriate for their needs. It also will help keep standards developers focused on the intended use of their standards, avoiding standards which are overly broad and/or unfocused.
+The Standardization Target Types, Standardization Targets, and Standardization Goal provide a well-defined context for the standard.  This will help users of standards to quickly understand the scope of a standard and to select those standards appropriate for their needs. It also will help keep standards developers focused on the intended use of their standards, avoiding standards which are overly broad and/or unfocused.
 
 === Conformance, Requirements, and key information
 
@@ -52,7 +52,7 @@ declared once and is uniquely identified as such, each requirement will be in a 
 
 Therefore, the ModSpec defines a "requirements class" as a set of requirements that must
 all be passed to achieve a particular conformance class (see
-<<term-conformance-test-class>>). Each requirements class has a one-to-one correspondence with a conformance class. A standard written to the ModSpec may
+<<ConformanceClass-definition>>). Each requirements class has a one-to-one correspondence with a conformance class. A standard written to the ModSpec may
 use this "module" structure in any manner consistent with the rest of the ModSpec.
 
 A standard may have mandatory and optional requirements classes.  This allows the options
@@ -60,12 +60,6 @@ in the testing procedure to be grouped into non-varying mandatory and optional c
 Each requirement within an optional requirements class is mandatory when that requirements class is
 implemented. When needed, a particular requirements class may contain only a single
 requirement.
-
-However, care must be taken, since the requirements classes may not always in a one-to-one
-correspondence to conformance classes in other standards which may be the source of
-requirements for a standard conformant to the ModSpec. If other standards are
-used, their options shall be specified to be useable within a standard conformant to
-the ModSpec, see <<cls-6-5-1>>.
 
 Conformance classes may contain dependencies on one another. These are represented by
 tests in one conformance class that state that another conformance class must be
@@ -84,7 +78,7 @@ paragraph, such as seen in <<req-1,Requirement 1>> below.
 
 The distribution of the information in a standard is not restricted. The only
 requirement is that requirements be grouped in a manner
-consistent with the conformance test classes, see <<req-6,Requirement 6>> and <<req-7,Requirement 7>>. 
+consistent with the conformance test classes, see <<req-6,Requirement 6>> and <<req-7,Requirement 7>>.
 
 === Documenting the Standard
 
